--- a/test/dummy/config/database.yml
+++ b/test/dummy/config/database.yml
@@ -23,3 +23,8 @@ production:
   database: db/production.sqlite3
   pool: 5
   timeout: 5000
+qa:
+  adapter: sqlite3
+  database: db/qa.sqlite3
+  pool: 5
+  timeout: 5000
